--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,5 +26,9 @@ test_script:
 on_success:
   - IF %APPVEYOR_REPO_BRANCH%==canary cp build\canary.ico build\icon.ico
   - yarn run dist
-  - dir .\dist\
+  - dir .\target\
   - ps: Get-ChildItem .\dist\squirrel-windows\*.exe | % { Push-AppveyorArtifact $_.FullName }
+
+artifacts:
+  - path: .\target
+  - name: hyper_build.zip
