--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,18 @@ bin/cli.*
 # dependencies
 node_modules
 
-# logs
-npm-debug.log
-yarn-error.log
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 
 # optional dev config file and plugins directory
 .hyper.js
 .hyper_plugins
+.yarnrc
+*.bak
 
 .DS_Store
