--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,9 +26,7 @@ test_script:
 on_success:
   - IF %APPVEYOR_REPO_BRANCH%==canary cp build\canary.ico build\icon.ico
   - yarn run dist
-  - dir .\node_modules\.bin
   - ps: Get-ChildItem .\dist\squirrel-windows\*.exe | % { Push-AppveyorArtifact $_.FullName }
-
-artifacts:
-  - path: .\target
-    name: hyper_build.zip
+  - ps: Invoke-Expression "& `"7z`" a -tzip -y hyper_unpacked.zip .\dist\win-unpacked"
+  - dir .\dist
+  - ps: Push-AppveyorArtifact hyper_unpacked.zip
